changed colors and words

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Style Tile</title>
+  <title>Emily Nachbar's Style Tile</title>
 	
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/grid.css">	
@@ -22,7 +22,7 @@
 
 		<section>
 
-			<h1>Your Website</h1>
+			<h1>Emily Nachbar's Style Tile</h1>
 			<em>Font name and color</em>
 
 			<h2>Primary Header</h2>
