--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div class="container">
 		
 		<section>
-			<img src="http://placehold.it/300x200" alt="Your Logo">
+			<img src="img/my-logo.png" alt="Your Logo">
 		</section>	
 
 		<section>
