--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<section>
 
 			<h1>Emily Nachbar's Style Tile</h1>
-			<em>Font name and color</em>
+			<em>Adelle and color</em>
 
 			<h2>Primary Header</h2>
 			<em>Font name and color</em>
