--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/grid.css">	
 
-  <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <script type="text/javascript" src="//use.typekit.net/npj5klx.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   			
   <link rel="stylesheet" href="css/styles.css">	
 	
