--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 	<div class="container">
 		
 		<section>
-			<img src="img/my-logo.png" alt="Your Logo">
+			<img src="img/logo.png" alt="Your Logo">
 		</section>	
 
 		<section>
 
 			<h1>Emily Nachbar's Style Tile</h1>
-			<em>Font name and color</em>
+			<em>Adelle</em>
 
 			<h2>Primary Header</h2>
 			<em>Font name and color</em>
