--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 	<div class="container">
 		
 		<section>
-			<img src="img/logo.png" alt="Your Logo">
+			
+			<img src="img/my-logo.gif" alt="Your Logo">
 		</section>	
 
 		<section>
 
-			<h1>Emily Nachbar's Style Tile</h1>
-			<em>Adelle</em>
+			<div class="title">Emily Nachbar's Style Tile</div>
+			<div class="titlefont">Title Font: Adelle</div>
 
 			<h2>Primary Header</h2>
 			<em>Font name and color</em>
