bg color boder radius

--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@
 			<div class="title">Emily Nachbar's Style Tile</div>
 			<div class="titlefont">Title Font: Adelle</div>
 
-			<h2>Primary Header</h2>
-			<em>Font name and color</em>
 
-			<h3>Secondary Header</h3>
-			<em>Font name and color</em>
+
+			<div class="primaryhead">Primary Header</div>
+			<div class="primaryheadfont">Primary Header Font: Adelle Sans </div>
+
+
+
+
+			<div class= "secondaryhead">Secondary Header</div>
+			<div class= "secondaryheadfont">Secondary Header Font: Adelle</div>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, maiores, hic, <a href="">Links</a> dolor laboriosam rerum numquam accusantium minima architecto inventore quibusdam <a href="">Links </a> harum illum labore quidem itaque iusto. Totam, soluta.</p>
 			<em>Font name and color</em>
