fixed grid and made lots of other minor changes

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 	
 	<div class="container">
 		
-		<section>
+		<header class= "grid_12">
 			
-			<img src="img/my-logo.gif" alt="Your Logo">
-		</section>	
+			<img src="img/my-logo.gif" alt="Your Logo" class= "grid_4 alpha">
+		
 
-		<section>
-
+		
+		<div class= "grid_8 omega">
 			<div class="title">Emily Nachbar's Style Tile</div>
-			
+		
 
-			<div class="titlefont">Title Font: Adelle</div>
+		<div class="titlefont">Title Font: Adelle</div>
 
 
 
@@ -40,38 +40,33 @@
 			
 			<div class= "secondaryheadfont">Secondary Header Font: Adelle</div>
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, maiores, hic, <a href="">Links</a> dolor laboriosam rerum numquam accusantium minima architecto inventore quibusdam <a href="">Links </a> harum illum labore quidem itaque iusto. Totam, soluta.</p>
-			<em>Font name and color</em>
-			
-		</section>
-		
-		<section>
+			<p>My body text font is also Adelle.</p>
+<nav>
+			<a href="https://github.com/enachbar">Github</a>
+				<a href="http://amateur7.tumblr.com/">Tumblr</a> 
+				<a href="http://instagram.com/emilynachbar">Instagram</a> 
+			</nav>
+			<section= "grid_6 alpha">
 			<div class="color-1"></div>
 			<div class="color-2"></div>
 			<div class="color-3"></div>
-			<em>Color Palette</em>
+			
 
-			<div class="clear"></div>
 		</section>
 		
-		<section>
+		<section= "grid_6 omega">
 			<div class="pattern-1"></div>
 			<div class="pattern-2"></div>
 			<div class="pattern-3"></div>
-			<em>Textures/Patterns</em>
+			
 
-			<div class="clear"></div>
 		</section>
+		</header>		
 
-		<footer>
-			<h3>References</h3>
-			<ul>
-				<li><a href="http://teamtreehouse.com/library/logo-design-basics">TreeHouse: Logo Design Basics</a></li>
-				<li><a href="http://styletil.es/">Samantha Warren's Stile Tiles</a></li>
-				<li><a href="http://samanthatoy.com/style-tiles/">Style Tile Examples</a></li>
-				<li><a href="http://alistapart.com/article/style-tiles-and-how-they-work">Style Tiles and How They Work</a></li>
-			</ul>
-		</footer>
+			
+		
+
+		
 
 		<!-- Clearfix -->
 		<div class="clear"></div>
